[package]
name = "builder"
version.workspace = true
edition.workspace = true
publish = false

[features]
test-context = []

[dependencies]
tree-sitter-c2rust.workspace = true
regex.workspace = true
serde.workspace = true
codemap.workspace = true
codemap-diagnostic.workspace = true
futures.workspace = true
serde_json.workspace = true
colored.workspace = true
wildmatch.workspace = true
thiserror.workspace = true
core-model = { path = "../core-subsystem/core-model" }
core-plugin-shared = { path = "../core-subsystem/core-plugin-shared" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
core-model-builder = { path = "../core-subsystem/core-model-builder" }

[build-dependencies]
cc = "*"
tree-sitter.workspace = true
tree-sitter-cli.workspace = true
tempfile.workspace = true

[dev-dependencies]
postgres-graphql-model-builder = { path = "../postgres-subsystem/postgres-graphql-model-builder" }
postgres-builder = { path = "../postgres-subsystem/postgres-builder" }
serde_json.workspace = true
serde_yaml.workspace = true
wasm-bindgen-test.workspace = true
wasm-bindgen-test-macro.workspace = true
multiplatform_test.workspace = true
insta.workspace = true

[lib]
doctest = false
