[package]
name = "cli"
publish = false
version.workspace = true
edition.workspace = true
repository = "https://github.com/exograph/exograph"

[[bin]]
name = "exo"
path = "src/main.rs"

[dependencies]
colored.workspace = true
tokio.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
heck.workspace = true
lazy_static.workspace = true
notify-debouncer-mini = "0.4.1"
serde.workspace = true
clap = "4.1.4"
futures.workspace = true
rand.workspace = true
ctrlc = "3.4"
zip = "0.6.6"
home = "0.5.4"
inquire = "0.7.5"
reqwest.workspace = true
indicatif = "0.17.3"
tempfile.workspace = true
which.workspace = true

exo-sql = { path = "../../libs/exo-sql", features = ["pool"] }
builder = { path = "../builder" }
testing = { path = "../testing" }
common = { path = "../common" }
core-plugin-shared = { path = "../core-subsystem/core-plugin-shared" }
core-model-builder = { path = "../core-subsystem/core-model-builder" }
postgres-model = { path = "../postgres-subsystem/postgres-model" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
postgres-model-builder = { path = "../postgres-subsystem/postgres-model-builder" }
deno-model-builder = { path = "../deno-subsystem/deno-model-builder" }
wasm-model-builder = { path = "../wasm-subsystem/wasm-model-builder" }

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.5.0"
