[package]
name = "cli"
publish = false
version.workspace = true
edition.workspace = true
repository = "https://github.com/exograph/exograph"

[[bin]]
name = "exo"
path = "src/main.rs"

[dependencies]
colored.workspace = true
tokio.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
heck.workspace = true
lazy_static.workspace = true
notify-debouncer-mini = "0.4.1"
clap = "4.5.21"
futures.workspace = true
rand.workspace = true
ctrlc = "3.4"
zip = "0.6.6"
home = "0.5.4"
inquire = "0.7.5"
reqwest = { workspace = true, features = ["stream"] }
serde_json.workspace = true
indicatif = "0.17.9"
tempfile.workspace = true
which.workspace = true

exo-sql = { path = "../../libs/exo-sql", features = ["pool"] }
builder = { path = "../builder" }
testing = { path = "../testing" }
common = { path = "../common" }
core-plugin-shared = { path = "../core-subsystem/core-plugin-shared" }
postgres-core-model = { path = "../postgres-subsystem/postgres-core-model" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
postgres-builder = { path = "../postgres-subsystem/postgres-builder" }
deno-builder = { path = "../deno-subsystem/deno-builder" }
wasm-builder = { path = "../wasm-subsystem/wasm-builder" }

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.5.0"
