[package]
name = "cli"
publish = false
version.workspace = true
edition.workspace = true
repository = "https://github.com/exograph/exograph"

[[bin]]
name = "exo"
path = "src/main.rs"

[dependencies]
colored.workspace = true
tokio.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
heck.workspace = true
lazy_static.workspace = true
notify-debouncer-mini = "0.4.1"
clap.workspace = true
futures.workspace = true
rand.workspace = true
ctrlc = "3.4"
zip = "0.6.6"
home = "0.5.11"
inquire = "0.7.5"
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
indicatif = "0.17.11"
tempfile.workspace = true
which.workspace = true
toml = { version = "0.8.22", features = ["parse"] }
semver = "1.0.26"
pluralizer.workspace = true
wildmatch.workspace = true
tracing.workspace = true
strsim = "0.11.1"

exo-deno = { path = "../../libs/exo-deno" }
exo-sql = { path = "../../libs/exo-sql", features = [
  "pool",
  "interactive-migration",
] }
exo-env = { path = "../../libs/exo-env" }
builder = { path = "../builder" }
testing = { path = "../testing" }
common = { path = "../common" }
introspection-util = { path = "../introspection-util" }
core-plugin-shared = { path = "../core-subsystem/core-plugin-shared" }
postgres-core-model = { path = "../postgres-subsystem/postgres-core-model" }
postgres-core-builder = { path = "../postgres-subsystem/postgres-core-builder" }
core-model-builder = { path = "../core-subsystem/core-model-builder" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
postgres-builder = { path = "../postgres-subsystem/postgres-builder" }
deno-builder = { path = "../deno-subsystem/deno-builder" }
wasm-builder = { path = "../wasm-subsystem/wasm-builder" }

[dev-dependencies]
exo-sql = { path = "../../libs/exo-sql", features = ["test-support"] }
common = { path = "../common", features = ["test-support"] }

[target.'cfg(unix)'.dev-dependencies]
rexpect = "0.6.1"
