[package]
name = "common"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
test-context = []
test-support = ["wildmatch"]
opentelemetry = ["opentelemetry_sdk", "opentelemetry-otlp", "tonic"]

[dependencies]
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
jsonwebtoken.workspace = true
oidc-jwt-validator = { git = "https://github.com/exograph/oidc_jwt_validator", branch = "exograph" }
cookie = "0.18.1"
elsa = "1.8.1"
async-graphql-value.workspace = true
tokio-postgres.workspace = true
colored.workspace = true

exo-env = { path = "../../libs/exo-env" }
exo-sql = { path = "../../libs/exo-sql" }

anyhow.workspace = true
indicatif = "0.17.11"

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27.1", default-features = false, features = [
  "trace",
] }
opentelemetry_sdk = { version = "0.27.1", features = [
  "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.27.0", features = [
  "reqwest-client",
  "reqwest-rustls",
  "http-proto",
  "tls",
], optional = true }
# Tonic isn't used directly but we need these flags to establish a TLS connection
tonic = { version = "0.12.3", features = ["tls", "tls-roots"], optional = true }

hyper-util = { version = "0.1.7" }
tower = { version = "0.5", features = ["util"] }

wildmatch = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
zip.workspace = true
tempfile.workspace = true
home = "0.5.11"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen-test.workspace = true
multiplatform_test.workspace = true

[lib]
doctest = false
