[package]
name = "common"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
test-context = []
test-support = ["wildmatch"]
opentelemetry = ["opentelemetry_sdk", "opentelemetry-otlp", "tonic"]

[dependencies]
thiserror.workspace = true
tokio.workspace = true
reqwest = { workspace = true, features = ["stream"] }
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
jsonwebtoken.workspace = true
cookie = "0.18.1"
elsa = "1.11.2"
async-graphql-value.workspace = true
tokio-postgres.workspace = true
colored.workspace = true

exo-env = { path = "../../libs/exo-env" }
exo-sql = { path = "../../libs/exo-sql" }

anyhow.workspace = true
indicatif = "0.18.4"
sha2 = "0.10"

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
] }
opentelemetry_sdk = { version = "0.31", features = [
  "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31", features = [
  "grpc-tonic",
  "reqwest-client",
  "reqwest-rustls",
  "http-proto",
  "tls",
], optional = true }
# Tonic isn't used directly but we need these flags to establish a TLS connection
tonic = { version = "0.14", features = [
  "tls-aws-lc",
  "tls-native-roots",
], optional = true }

hyper-util = { version = "0.1.20" }
tower = { version = "0.5", features = ["util"] }

wildmatch = { workspace = true, optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
zip.workspace = true
tempfile.workspace = true
home = "0.5.12"
# Use aws_lc_rs for native targets
oidc-jwt-validator = { git = "https://github.com/exograph/oidc_jwt_validator", version = "0.3.0", branch = "exograph", features = [
  "aws_lc_rs",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Use rust_crypto for wasm targets (aws_lc_rs doesn't support wasm)
oidc-jwt-validator = { git = "https://github.com/exograph/oidc_jwt_validator", version = "0.3.0", branch = "exograph", features = [
  "rust_crypto",
] }
# getrandom 0.2.x (pulled in by jsonwebtoken) uses "js" feature for wasm support
getrandom = { version = "0.2", features = ["js"] }
# getrandom 0.4.x (pulled in by rand 0.10) uses "wasm_js" feature for wasm support
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen-test.workspace = true
multiplatform_test.workspace = true

[lib]
doctest = false

[package.metadata.cargo-shear]
ignored = ["getrandom", "getrandom_04"]
