[package]
name = "graphql-router"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-graphql-parser.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
tracing = { version = "0.1", features = ["log"] }

core-router = { path = "../core-subsystem/core-router" }
core-plugin-shared = { path = "../core-subsystem/core-plugin-shared" }
core-resolver = { path = "../core-subsystem/core-resolver" }
introspection-resolver = { path = "../introspection-subsystem/introspection-resolver" }
common = { path = "../common" }
exo-env = { path = "../../libs/exo-env" }

[dev-dependencies]

[lib]
doctest = false
