[package]
name = "introspection-util"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
include_dir.workspace = true
ctor.workspace = true

exo-deno = { path = "../../libs/exo-deno", features = ["typescript-loader"] }

[build-dependencies]
which.workspace = true

[lib]
doctest = false
