[package]
name = "playground-router"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
mime_guess = "2.0.5"
async-trait.workspace = true
include_dir.workspace = true
http.workspace = true

common = { path = "../common" }
exo-env = { path = "../../libs/exo-env" }

[dev-dependencies]
tokio.workspace = true

[build-dependencies]
which.workspace = true

[lib]
doctest = false
