[package]
name = "resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0.0"
async-graphql-parser = "5.0.6"
async-graphql-value = "5.0.6"
async-stream = "0.3.3"
async-trait = "0.1.53"
bytes = "1"
futures = "0.3"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7.6"

typed-generational-arena = { version = "0.2", features = ["serde"] }
thiserror = "1.0.30"
include_dir = "0.7.2"
bincode = "1.3.3"
tokio = "1"

tracing = { version = "0.1", features = ["log"] }

payas-sql = { path = "../../libs/payas-sql" }
payas-deno = { path = "../../libs/payas-deno" }
core-model = { path = "../core-subsystem/core-model" }
core-plugin-shared = { path = "../core-subsystem/core-plugin-shared" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
core-resolver = { path = "../core-subsystem/core-resolver" }
postgres-model = { path = "../postgres-subsystem/postgres-model" }
deno-model = { path = "../deno-subsystem/deno-model" }
wasm-model = { path = "../wasm-subsystem/wasm-model" }
introspection-resolver = { path = "../introspection-subsystem/introspection-resolver" }

[dev-dependencies]
insta = "1.14.0"
tokio = "1"
builder = { path = "../builder" }
