[package]
name = "resolver"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-recursion.workspace = true
async-graphql-parser.workspace = true
async-graphql-value.workspace = true
async-stream = "0.3.3"
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
include_dir.workspace = true
bincode.workspace = true
tracing = { version = "0.1", features = ["log"] }

core-model = { path = "../core-subsystem/core-model" }
core-plugin-shared = { path = "../core-subsystem/core-plugin-shared" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
core-resolver = { path = "../core-subsystem/core-resolver" }
introspection-resolver = { path = "../introspection-subsystem/introspection-resolver" }
common = { path = "../common" }

[dev-dependencies]
tokio.workspace = true
builder = { path = "../builder" }

[build-dependencies]
which = "4.4.0"

[lib]
doctest = false
