[package]
name = "router"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
http.workspace = true

common = { path = "../common" }
resolver = { path = "../resolver" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
exo-env = { path = "../../libs/exo-env" }

[lib]
doctest = false
