[package]
name = "router"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
http.workspace = true
async-trait.workspace = true
tracing.workspace = true

common = { path = "../common" }
graphql-router = { path = "../graphql-router" }
rest-router = { path = "../rest-router" }
playground-router = { path = "../playground-router" }
core-plugin-interface = { path = "../core-subsystem/core-plugin-interface" }
exo-env = { path = "../../libs/exo-env" }

[lib]
doctest = false
