[package]
name = "rpc-router"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
tracing.workspace = true
http.workspace = true
async-stream.workspace = true
bytes.workspace = true
serde_json.workspace = true

common = { path = "../common" }
exo-env = { path = "../../libs/exo-env" }
core-resolver = { path = "../core-subsystem/core-resolver" }
rpc-introspection = { path = "../rpc-introspection" }

[dev-dependencies]


[lib]
doctest = false
