[package]
name = "server-actix"
version.workspace = true
edition.workspace = true
repository = "https://github.com/exograph/exograph"

[features]
default = [
  "static-postgres-resolver",
  "static-deno-resolver",
  "static-wasm-resolver",
]

static-postgres-resolver = ["server-common/static-postgres-resolver"]
static-deno-resolver = ["server-common/static-deno-resolver"]
static-wasm-resolver = ["server-common/static-wasm-resolver"]

cross = ["server-common/cross"]
not_cross = ["server-common/not_cross"]

[dependencies]
async-trait.workspace = true
actix-web = { version = "4.1.0", default-features = false, features = [
  "macros",
  "cookies",
] }
actix-cors = "0.6.2"
actix-files = "0.6.2"

serde_json = { workspace = true, features = ["preserve_order"] }
futures.workspace = true
tracing.workspace = true
tracing-actix-web = "0.6.0"
resolver = { path = "../resolver" }
core-resolver = { path = "../core-subsystem/core-resolver" }
server-common = { path = "../server-common" }

[[bin]]
name = "exo-server"
path = "src/main.rs"
