[package]
name = "server-actix"
publish = false
version.workspace = true
edition.workspace = true
repository = "https://github.com/exograph/exograph"

[features]
default = [
  "static-postgres-resolver",
  "static-deno-resolver",
  "static-wasm-resolver",
]

static-postgres-resolver = ["server-common/static-postgres-resolver"]
static-deno-resolver = ["server-common/static-deno-resolver"]
static-wasm-resolver = ["server-common/static-wasm-resolver"]

[dependencies]
async-trait.workspace = true
actix-web = { version = "4.9.0", default-features = false, features = [
  "macros",
  "cookies",
] }
thiserror.workspace = true

serde_json = { workspace = true, features = ["preserve_order"] }
futures.workspace = true
tracing.workspace = true
tracing-actix-web = "0.7.11"
url.workspace = true
reqwest.workspace = true
http.workspace = true
resolver = { path = "../resolver" }
router = { path = "../router" }
core-resolver = { path = "../core-subsystem/core-resolver" }
server-common = { path = "../server-common" }
common = { path = "../common" }
exo-env = { path = "../../libs/exo-env" }

[[bin]]
name = "exo-server"
path = "src/main.rs"
