# This crate is intended to be built only on Linux platforms.
#
# Once https://github.com/rust-lang/cargo/issues/5220 is resolved,
# we will be able to include this crate in the workspace only for the linux target.
# Until then, we need to scope dependencies to the linux target as well as mark
# each source file as `#![cfg(target_os = "linux")]`.

[package]
name = "server-aws-lambda"
publish = false
version.workspace = true
edition.workspace = true
repository = "https://github.com/exograph/exograph"

[target.'cfg(target_os = "linux")'.dependencies]
async-trait.workspace = true
lambda_runtime = "0.12.0"
futures.workspace = true
opentelemetry = { version = "0.17", default-features = false, features = [
  "trace",
] }
opentelemetry-jaeger = "0.22"
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["full"] }
http.workspace = true

router = { path = "../router" }
core-resolver = { path = "../core-subsystem/core-resolver" }
server-common = { path = "../server-common" }
common = { path = "../common" }
exo-env = { path = "../../libs/exo-env" }

[target.'cfg(target_os = "linux")'.dev-dependencies]
builder = { path = "../builder" }

[features]
static-postgres-resolver = ["server-common/static-postgres-resolver"]
static-deno-resolver = ["server-common/static-deno-resolver"]
static-wasm-resolver = ["server-common/static-wasm-resolver"]
default = [
  "static-postgres-resolver",
  "static-deno-resolver",
  "static-wasm-resolver",
]

[[bin]]
name = "bootstrap"
path = "src/main.rs"
